# OpenTrack

./: .gitignore  README.md  mujoco_playground_init.py
deploy/: .clangd  .gitattributes  .gitignore  CMakeLists.txt  README_deployment.md  build_w_torque_projection.sh  build_wo_torque_projection.sh  motion_checkpoint_list.md  start_deploy_w_torque_projection.sh  start_deploy_wo_torque_projection.sh  start_sim_w_torque_projection.sh  start_sim_wo_torque_projection.sh
deploy/my_docs/: README_260513.md  README_260518.md  README_260519.md  README_260520.md
deploy/sim_interface/: .gitattributes  .gitignore  main.py  robot_entry.py  viewer_dds.py  viewer_entry.py  wireless_controller.py
deploy/sim_interface/my_docs/: README_usage.md
deploy/state_machine/: CMakeLists.txt  README.md  cfg.hpp  conversion.hpp  fsm_basic_controller.hpp  fsm_loco_controller.cpp  fsm_loco_controller.hpp  fsm_stand_controller.cpp  fsm_stand_controller.hpp  fsm_tracker_controller.cpp  fsm_tracker_controller.hpp  main.cpp  officialize_logger.hpp  robot_controller.hpp  robot_interface.hpp  state_machine.hpp
deploy/state_machine/params/: params.json
deploy/storage/: g1_tracking_constant.yaml
scripts/process_motion/: convert_motion_npz2onnx.py
src/envs/g1/: g1_tracking_constants.py
storage/training_configs/dagger/: demo.json  demo_v2.json
track_mj/envs/: __init__.py
track_mj/envs/g1_tracking/: g1_tracking_constants.py
track_mj/envs/g1_tracking/train/: g1_env_tracking_general.py  g1_env_tracking_general_dr.py  g1_env_tracking_general_terrain_dr.py
track_mj/envs/g1_tracking_adapter/: __init__.py  g1_tracking_constants.py
track_mj/envs/g1_tracking_adapter/play/: __init__.py  play_g1_env_tracking_general.py
track_mj/envs/g1_tracking_adapter/train/: __init__.py  g1_env_tracking_general.py  g1_env_tracking_general_dr.py  g1_env_tracking_general_terrain_dr.py
track_mj/envs/g1_tracking_dagger/: g1_tracking_constants.py
track_mj/envs/g1_tracking_dagger/train/: g1_env_tracking_general.py  g1_env_tracking_general_dr.py  g1_env_tracking_general_terrain_dr.py
track_mj/eval/adapter/: brax2onnx.py  export_onnx.py  mj_onnx_video.py
track_mj/eval/tracking/: export_onnx.py
track_mj/learning/models/dagger/: policy.py  policy_args.py
track_mj/learning/policy/dagger/: dagger_horizon.py
track_mj/learning/policy/model_based_ppo/: brax_networks.py  model_based_ppo_losses.py  model_based_ppo_networks.py  train_model_based_ppo.py
track_mj/learning/train/: train_adapter.py  train_dagger.py
track_mj/utils/: registry.py
